# crible

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: source_tiers.yaml
openspec/: project.md
openspec/changes/add-bias-correcting-research-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-bias-correcting-research-agent/specs/audit-log/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/criteria-extraction/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/failure-mode-detection/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/final-advice/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/long-tail-coverage/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/orchestration/: spec.md
openspec/changes/add-bias-correcting-research-agent/specs/provider-configuration/: spec.md
openspec/changes/client-side-discovery/: proposal.md  tasks.md
openspec/changes/ground-evidence-in-fetched-content/: design.md  proposal.md  tasks.md
openspec/changes/require-live-links-and-quotes/: proposal.md  tasks.md
openspec/changes/steer-retrieval-toward-trusted-sources/: design.md  proposal.md  tasks.md
openspec/changes/support-local-sovereign-models/: design.md  proposal.md  tasks.md
src/crible/: __init__.py  advice.py  audit.py  cli.py  config.py  criteria.py  discovery.py  fetch.py  links.py  llm.py  models.py  orchestrator.py  ranking.py  skepticism.py  sources.py  verify.py
tests/: test_core.py
(+16 files in other folders)
